fix: adjust button shadow for improved visibility

--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,7 @@ body {
   border-radius: 100px;
   text-decoration: none;
   font-size: 0.85rem;
-  box-shadow: 0 0px 15px rgba(79, 22, 105, 0.24);
+  box-shadow: 0 0px 17px rgba(79, 22, 105, 0.24);
 }
 
 .btn-bar:hover {
